Donner les permission au git action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,3 +37,4 @@ jobs:
         with:
           branch: gh-pages # Branche pour GitHub Pages
           folder: dist/todolist # Chemin vers le dossier de build
+          token: ${{ secrets.GITHUB_TOKEN }}
