--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
 
       # 4. Exécutez `ng deploy` pour déployer l'application
       - name: Deploy Angular App
+        token: ${{ secrets.PAT }}
         run: npx ng deploy --base-href=https://atimera.github.io/todolist/
 
       # 5. (Optionnel) Ajoutez des étapes pour nettoyer ou vérifier le déploiement
