Donner les permissions pour le déploiement automatique

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # 3. Configurez l'identité Git
+      - name: Set Git identity
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
       # 4. Exécutez `ng deploy` pour déployer l'application
       - name: Deploy Angular App
-        token: ${{ secrets.PAT }}
         run: npx ng deploy --base-href=https://atimera.github.io/todolist/
 
       # 5. (Optionnel) Ajoutez des étapes pour nettoyer ou vérifier le déploiement
