--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,12 @@ jobs:
         run: npm install
 
       # 3. Configurez l'identité Git
-      # - name: Set Git identity
-      #   run: |
-      #     git config --global user.name "GitHub Actions"
-      #     git config --global user.email "actions@github.com"
+      - name: Set Git identity
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       # 4. Exécutez `ng deploy` pour déployer l'application
       - name: Deploy Angular App
